removed touch delay

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="robots" content="noidex, nofollow" />
-        <meta name="viewport" content="width=320">
+        <meta name="viewport" content="width=320, user-scalable=no">
         <title>ЕГЭ Центр</title>
     </head>
     <body>
